# coding-with-agents-workshop

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install-copilot-cli.sh  install-plugins.sh  install-vsix.sh  link-agent-resources.sh  on-create.sh  post-start.sh  postCreate.sh
.github/: README.md  copilot-instructions.md
.github/agents/: docstring-writer.agent.md  reproducibility-auditor.agent.md  research-analyst.agent.md  research-data-scientist.agent.md  research-pair.agent.md  scientific-python-reviewer.agent.md
.github/chatmodes/: docstring-writer.chatmode.md  scientific-python-reviewer.chatmode.md
.github/instructions/: notebooks.instructions.md  tests.instructions.md
.github/prompts/: citation-and-release.prompt.md  eda-summary.prompt.md  experiment.prompt.md  handoff.prompt.md  implement.prompt.md  iterate-plan.prompt.md  plan.prompt.md  research.prompt.md  scaffold-package.prompt.md  validate.prompt.md  write-tests.prompt.md
.github/skills/draft-report/: SKILL.md
.github/skills/experiment-log/: SKILL.md
.github/skills/experiment-log/scripts/: new_entry.py
.github/skills/explore-data/: SKILL.md
.github/skills/handoff/: SKILL.md
.github/skills/plan-analysis/: SKILL.md
.github/skills/profile-dataset/: SKILL.md
.github/skills/statistical-tests/: SKILL.md
.github/skills/validate-analysis/: SKILL.md
blocks/01-landscape/: README.md  instructor-notes.md  resources.md  slides.css  slides.md
blocks/01-landscape/demo/: AGENTS.md  notebook.ipynb
blocks/01-landscape/demo/starter/: pyproject.toml
blocks/01-landscape/demo/starter/src/sci_units/: __init__.py  converters.py
blocks/01-landscape/demo/starter/tests/: test_converters.py
blocks/02-how-it-works/: README.md  instructor-notes.md  resources.md  slides.css  slides.md
blocks/02-how-it-works/demo/: notebook.ipynb
blocks/03-research-loop/: README.md  instructor-notes.md  resources.md  slides.css  slides.md
blocks/03-research-loop/demo/: AGENTS.md
blocks/03-research-loop/demo/expected-artifacts/: analysis-plan-text-entry.md  analysis.py  draft-text-entry.md  explore-text-entry.md  implement-vscm-package.md  plan-vscm-package.md  profile-text-entry.md  research-vscm-package.md  test-text-entry.md  validate-text-entry.md  validate-vscm-package.md
blocks/03-research-loop/demo/starter/: SSP_CO2emissions.csv  data.csv  make_data.py
blocks/04-build-a-skill/: README.md  instructor-notes.md  resources.md  slides.css  slides.md
blocks/04-build-a-skill/exercise/: README.md  ideas.md  my-agent.agent.md.template  my-instruction.instructions.md.template  my-mode.chatmode.md.template  my-prompt.prompt.md.template  my-skill.SKILL.md.template
blocks/_shared/: slides.css
docs/: common-audience-questions.md  dry-run-plan.md  pre-block-checklists.md  setup.md  statistical-tests-reference.md  workshop-outline.md
workshop_agent/: pyproject.toml
workshop_agent/src/workshop_agent/: __init__.py  agent.py
