[project]
name = "viss-agentic-ai-workshop-iss-2026"
version = "0.1.0"
description = "Coding with AI Agents: A Hands-On Workshop for Scientists (2026 Interdisciplinary Science Summit)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "UW Scientific Software Engineering Center" },
]
dependencies = [
    "ipykernel>=6.29.0",
    "litellm>=1.50.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=3.0.3",
    "pint>=0.24.0",
    "pytest>=8.3.0",
    "sci-units",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "workshop-agent",
]

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.uv.sources]
sci-units = { path = "blocks/01-landscape/demo/starter", editable = true }
workshop-agent = { path = "workshop_agent", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["blocks"]
addopts = "-ra"
