[project]
name = "workshop-agent"
version = "0.1.0"
description = "The agent loop, tools, and tool schemas extracted from Block 1's notebook so Blocks 2-4 can reuse them."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workshop_agent"]
