[project]
name = "sci-units"
version = "0.1.0"
description = "Tiny scientific unit-conversion package used as the running scenario across the workshop."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sci_units"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
